--- a/changePassword.html
+++ b/changePassword.html
@@ -68,7 +68,7 @@
                       <a href="mainElections.html" ><i class="fa fa-desktop "></i>Dashboard <span id="spanID6"class="badge" style="background-color:red"></span></a>
                   </li>
                   <li>
-                     <a href="allUsers.html"><i class="fa fa-users "></i>Users</a>
+                     <a href="allUsers.html"><i class="fa fa-users "></i>Users <span id="spanID96"class="badge" style="background-color:red"></span></a>
                  </li>
                  <li>
                     <a href="allElections.html"><i class="fa fa-edit "></i>User Elections</a>
@@ -196,6 +196,21 @@
       });
     }
     badgePending();
+
+    countBadgeUser = 0;
+    var badgeUser = function(){
+      firebase.database().ref("Kullanıcılar").on("child_added",function(snapshot){
+        firebase.database().ref("Kullanıcılar").child(snapshot.key).on("value",function(snapshot2){
+          var ozgur = snapshot2.val().Free
+          if(ozgur == "Dondurmak istiyorum" || ozgur == "Açmak istiyorum"){
+            countBadgeUser += 1;
+            document.getElementById("spanID96").innerHTML = countBadgeUser
+          }
+        });
+      });
+
+    }
+    badgeUser();
 
     function updatePass(){
       var sifre1 = document.getElementById("inp1").value
