--- a/login.html
+++ b/login.html
@@ -60,7 +60,7 @@
 					</div>
 
 					<div class="container-login100-form-btn p-t-10">
-						<button type="button" onclick="login1()" class="login100-form-btn">
+						<button id="buttonClick" type="button" onclick="login1()" class="login100-form-btn">
 							Login
 						</button>
 					</div>
